-
Bug
-
Resolution: Done
-
P2: Important
-
5.15.0
-
0bf120f5fd197cd215cd9520a494b162887d1ec4 (qt/qtbase/dev) 7218665699e31ac8eebab17afd684d1a56d12ac3 (qt/qtbase/5.15)
With 5.15.0, application 's style settings seem to be ignored and therefore it's not applied.
Please refer to the attached sample. It is working fine till 5.14.2
For Gerrit Dashboard: QTBUG-85469 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
307669,5 | Ensure styles always get to polish the application palette | dev | qt/qtbase | Status: MERGED | +2 | 0 |
308195,3 | Ensure styles always get to polish the application palette | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |